...
          name="(tabs)"
          options={{
            headerTitle: "My Pets",
            presentation: "modal",
            headerRight: () => (
              <Link href="/pets/new" asChild>
                <Pressable testID="add-pet-button" style={styles.headerButton}>
                  <Ionicons name="add" size={28} color={theme.tint} />
                </Pressable>
              </Link>
            ),
          }}
        />
...
